# nrf_wifi

./: .gitignore  CMakeLists.txt  CODEOWNERS  Doxyfile  Makefile  README.md  nrf_wifi_osal_module.c
.github/workflows/: dnm.yml  module-monitor.yml  wifi-doc-check.yml
bus_if/bal/inc/: bal_api.h  bal_ops.h  bal_structs.h
bus_if/bal/src/: bal.c
bus_if/bus/pcie/inc/: pcie.h
bus_if/bus/pcie/src/: pcie.c
bus_if/bus/qspi/src/: qspi.c
doc/: low_api_common.rst  low_api_radio_test.rst  low_api_wifi.rst
fw_if/umac_if/inc/: fmac_tx.h
fw_if/umac_if/inc/common/: fmac_api_common.h  fmac_structs_common.h  fmac_util.h
fw_if/umac_if/inc/default/: fmac_api.h  fmac_structs.h
fw_if/umac_if/inc/fw/: host_rpu_common_if.h  host_rpu_data_if.h  host_rpu_sys_if.h  host_rpu_umac_if.h  lmac_if_common.h  patch_info.h
fw_if/umac_if/inc/fw/stats/: rpu_stats_common.h
fw_if/umac_if/inc/fw/stats/default/: rpu_umac_stats.h
fw_if/umac_if/inc/fw/stats/offloaded_raw_tx/: rpu_lmac_phy_stats.h  rpu_umac_stats.h
fw_if/umac_if/inc/fw/stats/radio_test/: rpu_lmac_phy_stats.h  rpu_umac_stats.h
fw_if/umac_if/inc/fw/stats/scan_only/: rpu_lmac_phy_stats.h  rpu_umac_stats.h
fw_if/umac_if/inc/fw/stats/system/: rpu_lmac_phy_stats.h  rpu_umac_stats.h
fw_if/umac_if/inc/fw/stats/system_with_raw/: rpu_lmac_phy_stats.h  rpu_umac_stats.h
fw_if/umac_if/inc/offload_raw_tx/: fmac_api.h  fmac_cmd.h  fmac_event.h  fmac_structs.h
fw_if/umac_if/inc/radio_test/: fmac_api.h  fmac_cmd.h  fmac_event.h  fmac_structs.h
fw_if/umac_if/inc/system/: fmac_ap.h  fmac_api.h  fmac_cmd.h  fmac_rx.h  fmac_structs.h  fmac_tx.h
fw_if/umac_if/src/: cmd.c  event.c  fmac_api_common.c  fmac_peer.c  fmac_util.c  fmac_vif.c  rx.c  tx.c
fw_if/umac_if/src/common/: fmac_api_common.c  fmac_cmd_common.c  fmac_util.c
fw_if/umac_if/src/default/: fmac_api.c
fw_if/umac_if/src/offload_raw_tx/: fmac_api.c  fmac_cmd.c  fmac_event.c
fw_if/umac_if/src/radio_test/: fmac_api.c  fmac_cmd.c  fmac_event.c
fw_if/umac_if/src/system/: fmac_api.c  fmac_cmd.c  fmac_event.c  fmac_peer.c  fmac_vif.c  rx.c  tx.c
hw_if/hal/inc/: hal_structs.h  spsc_qm.h  wifi_ipc_service.h
hw_if/hal/inc/common/: hal_api_common.h  hal_fw_patch_loader.h  hal_interrupt.h  hal_mem.h  hal_reg.h  hal_structs_common.h  pal.h  phy_rf_params_common.h  rpu_if.h
hw_if/hal/inc/fw/: phy_rf_params.h
hw_if/hal/inc/offload_raw_tx/: hal_api.h
hw_if/hal/inc/radio_test/: hal_api.h  phy_rf_params.h
hw_if/hal/inc/system/: hal_api.h  phy_rf_params.h
hw_if/hal/src/: hal_api.c  hal_interrupt.c  spsc_qm.c  wifi_ipc_service.c
hw_if/hal/src/common/: hal_api_common.c  hal_fw_patch_loader.c  hal_interrupt.c  hal_mem.c  hal_reg.c  hpqm.c  pal.c
hw_if/hal/src/offload_raw_tx/: hal_api.c
hw_if/hal/src/radio_test/: hal_api.c
hw_if/hal/src/system/: hal_api.c
os_if/inc/: osal_api.h  osal_ops.h  osal_structs.h
os_if/src/: osal.c
scripts/: module.yml.j2  nrf70_fw_stats_parser.py  update_blobs.py
utils/inc/: list.h  queue.h  util.h
utils/src/: list.c  queue.c  util.c
zephyr/: module.yml
